--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         
 <body>
         <h1> ff </h1>
-        <a href="pagehtml"> page1<a/>
+        <a href="page.html"> page1<a/>
 </body>
 </html>
